# Kursovaya_scrum

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
models/: board.cpp  board.h  developer.cpp  developer.h  task.cpp  task.h
tests/: test_board.cpp  test_developer.cpp  test_history.cpp  test_task.cpp
widgets/: columnwidget.cpp  columnwidget.h  startscreen.cpp  startscreen.h  taskcard.cpp  taskcard.h
